<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>
  
  <groupId>mc.rellox</groupId>
  <artifactId>ExtractableEnchantments</artifactId>
  <version>12.5</version>
  <packaging>jar</packaging>
  
  <name>ExtractableEnchantments</name>
  <description>Implements enchantment extraction from items</description>
  
  <properties>
	  <java.version>21</java.version>
  </properties>
  
  <repositories>
  	<repository>
	  <id>jitpack.io</id>
	  <url>https://jitpack.io</url>
    </repository>
    <repository>
      <id>spigot-repo</id>
      <url>https://hub.spigotmc.org/nexus/content/repositories/snapshots/</url>
    </repository>
    <repository>
      <id>auxilor</id>
      <url>https://repo.auxilor.io/repository/maven-public/</url>
    </repository>
    <repository>
      <id>crazycrew-releases</id>
      <url>https://repo.crazycrew.us/releases</url>
    </repository>
    <repository>
      <id>nightexpress-releases</id>
      <url>https://repo.nightexpressdev.com/releases</url>
    </repository>
  </repositories>
  	
  <dependencies>
    <dependency>
      <groupId>org.spigotmc</groupId>
      <artifactId>spigot-api</artifactId>
      <version>1.21.10-R0.1-SNAPSHOT</version>
      <scope>provided</scope>
    </dependency>
    <dependency>
      <groupId>com.github.MilkBowl</groupId>
      <artifactId>VaultAPI</artifactId>
      <version>1.7.1</version>
      <scope>provided</scope>
	</dependency>
    <dependency>
      <groupId>com.willfp</groupId>
      <artifactId>eco</artifactId>
      <version>6.67.0</version>
      <scope>provided</scope>
    </dependency>
    <dependency>
      <groupId>com.willfp</groupId>
      <artifactId>EcoEnchants</artifactId>
      <version>11.0.0</version>
      <scope>provided</scope>
    </dependency>
    <dependency>
      <groupId>com.badbones69.crazyenchantments</groupId>
      <artifactId>crazyenchantments-paper-api</artifactId>
      <version>2.5</version>
      <scope>provided</scope>
    </dependency>
    <dependency>
      <groupId>su.nightexpress.excellentenchants</groupId>
      <artifactId>Core</artifactId>
      <version>5.2.1</version>
      <scope>provided</scope>
    </dependency>
  </dependencies>
  
  <build>
    <sourceDirectory>src</sourceDirectory>
    <plugins>
      <plugin>
        <artifactId>maven-compiler-plugin</artifactId>
        <version>3.11.0</version>
        <configuration>
		   <source>21</source>
		   <target>21</target>
        </configuration>
      </plugin>
    </plugins>
  </build>
</project>